Add a button that starts day animation
[#89621604]

--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 18px;
 }
+
+button {
+  margin-bottom: 2px;
+  vertical-align: middle;
+}
