--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
-html, body, div {
-  line-height: 1;
-  margin: 0;
-  padding: 0;
-}
+/*html, body, div {*/
+  /*line-height: 1;*/
+  /*margin: 0;*/
+  /*padding: 0;*/
+/*}*/
 
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 18px;
-}
+/*body {*/
+  /*font-family: Helvetica, Arial, sans-serif;*/
+  /*font-size: 18px;*/
+/*}*/
 
-button {
-  margin-bottom: 2px;
-  vertical-align: middle;
-}
+/*button {*/
+  /*margin-bottom: 2px;*/
+  /*vertical-align: middle;*/
+/*}*/
