--- a/css/view-manager.css
+++ b/css/view-manager.css
@@ -28,3 +28,12 @@
   right: 0;
   bottom: 0;
 }
+
+.view-label {
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  font-size: 16px;
+  color: white;
+  opacity: 0.8;
+}
