--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,32 @@
   /*margin-bottom: 2px;*/
   /*vertical-align: middle;*/
 /*}*/
+
+body {
+  background: #f6f6f6;
+  }
+.clear { clear: both; }
+#page-footer {
+  background: #a3dde7;
+  clear: both;
+  color: #0093b0;
+  font-size: .9em;
+  height: 140px;
+  margin-top: 3em;
+  padding: 1em 0;
+  text-align: center;
+  }
+  #page-footer section {
+    margin: 0 auto;
+    width: 1200px;
+    }
+#cc-brand {
+  display: block;
+  height: auto;
+  margin: 1em auto 1.5em;
+  width: 200px;
+  }
+  #cc-brand img {
+    height: auto;
+    width: 100%;
+    }
