--- a/css/seasons.css
+++ b/css/seasons.css
@@ -1,6 +1,10 @@
+label {
+  font-weight: 500;
+}
 .controls {
-  width: 800px;
-  margin: 20px auto;
+  margin: 10px auto;
+  position: relative;
+  width: 1200px;
 }
 
 .controls select {
@@ -10,21 +14,66 @@
 }
 
 .controls button {
-  margin: 2px;
+  margin-right: 10px;
 }
 
 .controls .form-group {
   margin-bottom: 5px;
 }
 
+.day {
+  font: 1.75em 'museo-slab', georgia, 'times new roman', serif;
+}
 .day-slider {
   display: inline-block;
-  width: 710px;
-  padding-top: 10px;
+  width: 795px;
+  padding: 25px 0 20px;
   vertical-align: middle;
-  margin-left: 10px;
 }
 
 .animation-btn {
+  margin-top: -8px !important;
   width: 70px;
+}
+
+.left-col {
+  width: 795px;
+}
+.right-col {
+  width: 395px;
+}
+.long-lat-sliders {
+  margin-top: -4px;
+  width: 395px;
+  }
+
+.btn {
+  background: #eb8723;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-family: bold 1em lato, arial, helvetica, sans-serif;
+  margin: 0;
+  padding: .375em .625em;
+  text-align: center;
+  text-decoration: none;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  box-shadow: 0 3px 0 #e16a3e;
+  background: -moz-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+  background: -ms-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+  background: -o-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+  background: -webkit-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+  background: linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+}
+.btn:active, .btn:focus, .btn:hover, .btn:visited {
+  background: #eb8723;
+  border: none;
+  color: #fff !important;
+  background: -moz-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
+  background: -ms-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
+  background: -o-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
+  background: -webkit-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
+  background: linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
 }
