--- a/css/view-manager.css
+++ b/css/view-manager.css
@@ -1,7 +1,7 @@
 .view-manager {
   width: 1200px;
-  height: 800px;
-  margin: 0 auto;
+  height: 600px;
+  margin: 10px auto 0;
   position: relative;
 }
 
@@ -10,21 +10,21 @@
 }
 
 .view.main {
-  width: 800px;
-  height: 800px;
+  width: 795px;
+  height: 600px;
   left: 0;
 }
 
 .view.small-top {
-  width: 400px;
-  height: 400px;
+  width: 395px;
+  height: 295px;
   right: 0;
   top: 0;
 }
 
 .view.small-bottom {
-  width: 400px;
-  height: 400px;
+  width: 395px;
+  height: 295px;
   right: 0;
   bottom: 0;
 }
