--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,11 @@
-/*html, body, div {*/
-  /*line-height: 1;*/
-  /*margin: 0;*/
-  /*padding: 0;*/
-/*}*/
-
-/*body {*/
-  /*font-family: Helvetica, Arial, sans-serif;*/
-  /*font-size: 18px;*/
-/*}*/
-
-/*button {*/
-  /*margin-bottom: 2px;*/
-  /*vertical-align: middle;*/
-/*}*/
-
 body {
   background: #f6f6f6;
-  }
-.clear { clear: both; }
+}
+
+.clear {
+  clear: both;
+}
+
 #page-footer {
   background: #a3dde7;
   clear: both;
@@ -27,18 +15,21 @@ body {
   margin-top: 3em;
   padding: 1em 0;
   text-align: center;
-  }
-  #page-footer section {
-    margin: 0 auto;
-    width: 1200px;
-    }
+}
+
+#page-footer section {
+  margin: 0 auto;
+  width: 1200px;
+}
+
 #cc-brand {
   display: block;
   height: auto;
   margin: 1em auto 1.5em;
   width: 200px;
-  }
-  #cc-brand img {
-    height: auto;
-    width: 100%;
-    }
+}
+
+#cc-brand img {
+  height: auto;
+  width: 100%;
+}
