--- a/css/seasons.less
+++ b/css/seasons.less
@@ -50,6 +50,7 @@
     width: 795px;
     padding: 25px 0 20px;
     vertical-align: middle;
+    margin-top: 10px;
   }
 
   .animation-btn {
@@ -66,7 +67,7 @@
   }
 
   .long-lat-sliders {
-    margin-top: -4px;
+    margin-top: 21px;
     width: 395px;
   }
 
@@ -76,7 +77,7 @@
     color: #fff;
     cursor: pointer;
     font-family: bold 1em lato, arial, helvetica, sans-serif;
-    margin: 0;
+    margin: -4px 0 0 0;
     padding: .375em .625em;
     text-align: center;
     text-decoration: none;
@@ -89,6 +90,12 @@
     background: -o-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
     background: -webkit-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
     background: linear-gradient(top, rgb(244, 182, 38) 0%, rgb(235, 135, 35) 100%);
+
+  }
+
+  .btn-small {
+    padding: .31em .625em;
+    line-height: 1em;
   }
 
   .btn:active, .btn:focus, .btn:hover, .btn:visited {
