--- a/css/seasons.less
+++ b/css/seasons.less
@@ -108,4 +108,12 @@
     background: -webkit-linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
     background: linear-gradient(top, rgb(244, 182, 38) 0%, rgb(244, 182, 38) 100%);
   }
+
+  .rays-ground-text{
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+    color:white;
+  }
 }
