Add toggle for Lat/Lng gridlines on Earth view Add Url parameter option for language in case used standalone

--- a/css/seasons.less
+++ b/css/seasons.less
@@ -33,7 +33,7 @@
   }
 
   .controls button {
-    margin-right: 10px;
+    margin-right: 4px;
   }
 
   .controls .form-group {
@@ -115,5 +115,13 @@
     text-align: center;
     width: 100%;
     color:white;
+  }
+
+  .earth-gridlines-toggle{
+    margin-top: 6px;
+    height: 25px;
+    input {
+      margin-left:6px;
+    }
   }
 }
