--- a/css/view-manager.less
+++ b/css/view-manager.less
@@ -8,13 +8,13 @@
 
   .view {
     position: absolute;
-    
+
     &.main {
       width: 795px;
       height: 600px;
       left: 0;
     }
-    
+
     &.small-top {
       width: 395px;
       height: 295px;
@@ -28,7 +28,7 @@
       right: 0;
       bottom: 0;
     }
-    
+
     &.hidden {
       display: none;
     }
@@ -38,6 +38,7 @@
     position: absolute;
     width: 90px !important;
     height: 25px !important;
+    padding: 2px 2px !important;
 
     &.main {
       top: 7px;
