Update bootstrap dependency

--- a/css/seasons.less
+++ b/css/seasons.less
@@ -1,11 +1,6 @@
 .grasp-seasons {
   // Note that bootstrap imports are scoped to .grasp-seasons, so we won't pollute rest of the page.
-  @import "../node_modules/bootstrap/less/variables.less";
-  @import "../node_modules/bootstrap/less/mixins.less";
-  @import "../node_modules/bootstrap/less/utilities.less";
-  @import "../node_modules/bootstrap/less/scaffolding.less";
-  @import "../node_modules/bootstrap/less/buttons.less";
-  @import "../node_modules/bootstrap/less/forms.less";
+  @import '~/node_modules/bootstrap/dist/bootstrap.css';
 
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
