Update dependencies, notably: - React 17 - Three.js 0.124 - Webpack 5

--- a/css/seasons-bootstrap.scss
+++ b/css/seasons-bootstrap.scss
@@ -1,4 +1,4 @@
-.grasp-seasons{
+.grasp-seasons {
   // Note that bootstrap imports are scoped to .grasp-seasons, so we won't pollute rest of the page.
-  @import "~bootstrap/scss/bootstrap";
+  @import "bootstrap/scss/bootstrap";
 }
