fix: remove code that depends on Bootstrap [PT-188049278]

--- a/css/jquery-ui-theme.less
+++ b/css/jquery-ui-theme.less
@@ -1,5 +1,5 @@
 .grasp-seasons {
-  // Note that bootstrap imports are scoped to .grasp-seasons, so we won't pollute rest of the page.
+  // Note that jquery-ui theme imports are scoped to .grasp-seasons, so we won't pollute rest of the page.
   // Use (less) to enforce LESS processing. Otherwise, style won't respect scope nesting.
   @import (less) "../node_modules/jquery-ui/themes/base/slider.css";
 
