--- a/css/seasons.less
+++ b/css/seasons.less
@@ -17,6 +17,9 @@
     margin: 10px auto;
     position: relative;
     width: 1200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .controls select {
@@ -57,10 +60,16 @@
 
   .right-col {
     width: 395px;
+
+    .checkboxes {
+      margin-top: 15px;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   .long-lat-sliders {
-    margin-top: 21px;
+    margin-top: 26px;
     width: 395px;
   }
 
